src/index.css
:root {
  --white-color: #F1F1F1;
  --black-color: #020202;
  --text-color: #696969;
  --strong-gradient: linear-gradient(135deg, rgba(222, 31, 31, 0.40) 0%, rgba(103, 31, 222, 0.40) 36.15%, rgba(34, 31, 222, 0.40) 66.33%, rgba(0, 163, 255, 0.40) 100%);
  --medium-gradient: linear-gradient(135deg, rgba(222, 31, 31, 0.21) 0%, rgba(103, 31, 222, 0.21) 36.45%, rgba(0, 114, 253, 0.21) 68.25%, rgba(0, 163, 255, 0.21) 100%);
  --light-gradient: linear-gradient(90deg, #EEDCDD 0%, #E3DCEF 33.27%, #DCDCEF 66.39%, #D9E8F2 100%);
}

*,
*::after,
*::before {
  box-sizing: border-box;
}

body {
  background: #F1F1F1;
  margin: 0;
  font-family: "Inter", sans-serif;
  max-width: 100vw;
  overflow-x: hidden;

}

.wrapper {
  max-width: 1280px;
  margin: 0 auto;
}

a {
  text-decoration: none;
}

p {
  color: var(--text-color);
  font-size: 16px;
  font-weight: 400;
  margin: 0;
  padding: 0;
}

h3 {
  margin: 0;
  padding: 0;
  font-family: Oswald;
  font-size: 24px;
  font-weight: 600;
}

h4 {
  margin: 0;
  padding: 0;
  font-size: 24px;
  font-weight: 700;
  min-width: max-content;
}

h5 {
  font-family: Oswald;
  font-size: 20px;
  font-weight: 700;
}

h6 {
  margin: 0;
  font-family: Oswald;
  font-size: 16px;
  font-weight: 700;
}

button {
  border: 0;
  display: flex;
  padding: 12px 24px;
  justify-content: center;
  align-items: center;
  gap: 10px;

  color: #020202;
  font-family: Oswald;
  font-size: 24px;
  font-style: normal;
  font-weight: 700;
  line-height: normal;

  grid-column-start: 2;
  grid-column-end: 3;

  border-radius: 24px;
  background: linear-gradient(135deg, rgba(222, 31, 31, 0.30) 0%, rgba(103, 31, 222, 0.30) 33.16%, rgba(0, 114, 253, 0.30) 68.28%, rgba(0, 163, 255, 0.30) 100%);
}

button:hover {
  box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
}

.inner_wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;

}

@media(max-width: 520px) {

  .wrapper {
    max-width: 320px;
    margin: 0 auto;
  }

  a {
    text-decoration: none;
  }

  p {
    color: #696969;
    font-size: 12px;
    font-weight: 400;
  }

  h3 {
    font-size: 20px;
    letter-spacing: -1.2px;
  }

  h4 {
    margin: 0;
    padding: 0;
    font-size: 24px;
    font-weight: 700;
    min-width: max-content;
  }

  h5 {
    font-family: Oswald;
    font-size: 20px;
    font-weight: 700;
  }

  h6 {
    margin: 0;
    font-family: Oswald;
    font-size: 16px;
    font-weight: 700;
  }

  button {
    border: 0;
    display: flex;
    padding: 8px 16px;
    justify-content: center;
    align-items: center;
    gap: 10px;

    font-family: Oswald;
    font-size: 12px;
    font-weight: 700;

    border-radius: 24px;
    background: linear-gradient(135deg, rgba(222, 31, 31, 0.30) 0%, rgba(103, 31, 222, 0.30) 33.16%, rgba(0, 114, 253, 0.30) 68.28%, rgba(0, 163, 255, 0.30) 100%);
  }

  button:hover {
    box-shadow: 0px 0px 8px 0px rgba(0, 0, 0, 0.25);
  }


}

